--- a/HeroesRun/stage6/src/index.html
+++ b/HeroesRun/stage6/src/index.html
@@ -195,7 +195,7 @@
         </li>
     </ul>
 </div>
-<div class="iframe-container">
+<div class="map-container">
     <h2>See you at the Big Ben!</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9934.722249271881!2d-0.1246254!3d51.5007292!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604c38c8cd1d9%3A0xb78f2474b9a45aa9!2sBig%20Ben!5e0!3m2!1sen!2s!4v1684247279116!5m2!1sen!2s"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
